# ROS2_DRL_Navigation

./: .gitignore  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
python/: algorithms.py
python/DDPG/: DDPG.ipynb
python/environments/: environment_params.json  gym.ipynb  gym_SAC.ipynb  gym_SAC.py  gym_TD3.ipynb  gym_TD3.py  matt_testing.ipynb  minh_testing.ipynb  model_creation.py  nav2d.py  nav2d_holo.py  nav2d_testing.py  randomize_wrapper.py  test.py  test_SAC.ipynb  test_TD3.ipynb  test_TD3.py  test_visualize.bat  test_visualize.sh  testing_env.py  testing_reset.py  utils.py
python/environments/Nav2D_TD3_SB3_results/: trial_to_param.json
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/scripts/: visualize_path.py
ros2_ws/src/agent_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/agent_bringup/config/: agent_rviz.rviz  controllers.yaml  ekf_params.yaml  ekf_params.yaml.bak  gui.config  gz_bridge.yaml  gz_bridge_gazebo_control.yaml  gz_bridge_ros_control.yaml
ros2_ws/src/agent_bringup/launch/: launch_agent.py  launch_all.py  launch_odom.py  launch_rviz.py  launch_teleop.py  launch_world.py
ros2_ws/src/agent_bringup/urdf/: agent.urdf.xacro  agent_body.xacro  agent_gazebo_control.xacro  agent_gazebo_properties.xacro  agent_peripherals.xacro  agent_ros_control.xacro
ros2_ws/src/agent_bringup/worlds/: empty_world.sdf  world_1.sdf  world_2.sdf  world_mt.sdf
ros2_ws/src/drl_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/drl_gui/drl_gui/: gui_node.py
ros2_ws/src/drl_policy/: package.xml  (+2 more)
(+55 files in other folders)
